# NamtarEngine

./: CMakeLists.txt  Engine.cpp  Engine.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  LICENSE  README.md  main.cpp
Core/CoreComponents/: Collider2D.cpp  Collider2D.h  Collision2DHandler.cpp  Collision2DHandler.h  SpriteRenderer.h
Core/Header/: Behaviour.h  Component.h  Engine.h  Entity.h  GameObject.h  IDManager.h  Logger.cpp  MonoInstance.h
Core/SceneData/: TestScene.JSON
Core/Source/: Behaviour.cpp  Component.cpp  Engine.cpp  Entity.cpp  GameObject.cpp  IDManager.cpp  InputManager.cpp
Editor/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt  header_list.cmake
Engine/Include/ne/: Component.h  Engine.h  GameObject.h  IDManager.h  Logger.h  MonoInstance.h
Engine/Include/ne/CoreComponents/: Behaviour.h  InputManager.h  SpriteRenderer.h
Engine/Include/ne/CoreComponents/Helper/: json.hpp
Engine/Source/: CMakeLists.txt  Engine.cpp  GameObject.cpp  IDManager.cpp  InputManager.cpp  Logger.cpp
SceneData/: TestScene.JSON
SpaceForce/: Enemy.cpp  Enemy.h  EnemyTemplate.cpp  EnemyTemplate.h  GameManager.cpp  GameManager.h  Health.cpp  Health.h  PlayerHealth.cpp  PlayerHealth.h  PlayerMovement.cpp  PlayerMovement.h
